--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="mt-5">
             <p class="lead text-uppercase mb-1">Hallo!</p>
             <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">Nama Saya Ahmad Jaelani</h1>
-            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Web Developer</p>
+            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Crew Store</p>
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">
@@ -78,7 +78,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">Hallo! Nama Saya Ahmad Jaelani.</h2>
-        <p>Saya merasa tertarik di bidang IT terutama web dan hardwarenya, semoga saya mendapat lebih banyak ilmu di bidang IT untuk mendapatkan wawasan yang cukup luas.</p>
+        <p>Individu yang aktif dan beradaptasi, siap memberikan pelayanan terbaik serta mendukung operasional toko. Mampu mengikuti instruksi dengan baik dan bekerja sama dalam tim.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Tgl lahir:</div>
@@ -96,19 +96,19 @@
             <div class="pb-1">Telepon:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">+6281-214-577-909</div>
+            <div class="pb-1 fw-bolder">+62 882-0021-33722</div>
           </div>
           <div class="col-sm-2">
             <div class="pb-1">Alamat:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">Jln.Cilame Cibaga, Desa Mekarmaju, Kec.Pasirjambu, Kab.Bandung, jawa barat</div>
+            <div class="pb-1 fw-bolder">Jln.Cilame Cibaga, Desa Mekarmaju, Kec. Pasirjambu, Kab. Bandung, jawa barat</div>
           </div>
           <div class="col-sm-2">
             <div class="pb-1">Bahasa:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">Indonesia, Inggris</div>
+            <div class="pb-1 fw-bolder">Indonesia</div>
           </div>
         </div>
       </div>
@@ -152,55 +152,30 @@
       <div class="row">
         <div class="col-md-5">
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">HTML</span><span>Menengah</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Komunikasi</span><span>Menengah</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">CSS</span><span>Pemula</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Basic Komputer</span><span>Pemula</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 20%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">JavaScript</span><span>Pemula</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Ketelitian</span><span>Pemula</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 15%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 25%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
            <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">PowerPoint</span><span>Menengah</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Kerja sama tim</span><span>Menengah</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
         </div>
-        <div class="col-md-5 offset-md-2">
-          <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">PHP</span><span>Pemula</span></div>
-            <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 10%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div> 
-          <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Canva</span><span>Menengah</span></div>
-            <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-          <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">MySQL</span><span>Pemula</span></div>
-            <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 5%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-          <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Photoshop</span><span>Pemula</span></div>
-            <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 5%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div> 
         </div>
       </div>
     </div>
@@ -275,15 +250,15 @@
 <div class="section px-3 px-lg-4 pt-5" id="experience">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Prestasi</h2>
+      <h2 class="marker marker-center">Pengalaman</h2>
     </div>
       <div class="col-md-6">
         <div class="card mb-3" data-aos="fade-left" data-aos-delay="300">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Kaligrafi</h3>
-                <div class="text-muted text-small">Juara Umum Ranking 3. <small>(2015-2017)</small></div>
+                <h3 class="h5 mb-1">PT. INOVINDO DIGITAL MEDIA</h3>
+                <div class="text-muted text-small">Web Developer. <small>(Maret 2024-Mei 2024</small></div>
               </div><img src="images/[UNSET].jpg" width="48" height="48" alt="app development"/>
             </div>
           </div>
@@ -333,131 +308,6 @@
     </div>
   </div>
 </div>
-<div class="section px-3 px-lg-4 pt-5" id="testimonials">
-  <div class="container-narrow">
-    <div class="text-center mb-5">
-      <h2 class="marker marker-center">Hobi</h2>
-    </div>
-    <div class="row"> 
-      <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="100">
-        <!-- <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Walter displays exemplary professionalism and is able to take on challenges. He learns quickly and is an asset to any team.</span></div> -->
-        <div class="d-flex justify-content-end align-items-end">
-          <div class="text-end me-2">
-            <div class="fw-bolder">Bermain Bulu Tangkis</div>
-            <div class="text-small">Jarang</div>
-          </div><img class="me-md-3 rounded" src="images/Badminton.jpg" width="96" height="96" alt="client 1"/>
-        </div>
-      </div>
-      <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-delay="300">
-        <!-- <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Walter displays exemplary professionalism and is able to take on challenges. He learns quickly and is an asset to any team.</span></div> -->
-        <div class="d-flex justify-content-end align-items-end">
-          <div class="text-end me-2">
-            <div class="fw-bolder">Bermain Game</div>
-            <div class="text-small">Sering</div>
-          </div><img class="me-md-3 rounded" src="images/images.jpg" width="96" height="96" alt="client 1"/>
-        </div>
-      </div>
-      <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="200">
-        <!-- <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Walter is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div> -->
-        <div class="d-flex justify-content-end align-items-end">
-          <div class="text-end me-2">
-            <div class="fw-bolder">Membaca Buku Komik</div>
-            <div class="text-small">Kadang-Kadang</div>
-          </div><img class="me-md-3 rounded" src="images/download 2.jpg" width="96" height="96" alt="client 1"/>
-        </div>
-      </div>
-      <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="200">
-        <!-- <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Walter is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div> -->
-        <div class="d-flex justify-content-end align-items-end">
-          <div class="text-end me-2">
-            <div class="fw-bolder">Menonton Film</div>
-            <div class="text-small">Kadang-Kadang</div>
-          </div><img class="me-md-3 rounded" src="images/download.jpg" width="96" height="96" alt="client 1"/>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> 
-<!-- <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="contact">
-  <div class="container-narrow">
-    <div class="text-center mb-5">
-      <h2 class="marker marker-center">Kontak Saya</h2>
-    </div>
-    <div class="row">
-      <div class="col-md-6" data-aos="zoom-in" data-aos-delay="100">
-        <div class="bg-light my-2 p-3 pt-2"><form action="https://formspree.io/your@email.com"
-    method="POST">
-    <div class="form-group my-2">
-      <label for="name" class="form-label fw-bolder">Nama</label>
-      <input class="form-control" type="text" id="name" name="name" required>
-    </div>
-    <div class="form-group my-2">
-      <label for="email" class="form-label fw-bolder">Email</label>
-      <input class="form-control" type="email" id="email" name="_replyto" required>
-    </div>
-  <div class="form-group my-2">
-    <label for="message" class="form-label fw-bolder">Pesan</label>
-    <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4" required></textarea>
-  </div>
-  <button class="btn btn-primary mt-2" type="submit">Kirim</button>
-</form> -->
-        </div>
-      </div>
-      <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
-        <div class="mt-3 px-1">
-          <div class="h5">Mari kita mengobrol bagaimana saya dapat membantu anda!</div>
-          <!-- <p>If you like my work and want to avail my services then drop me a message using the contact form. </p> -->
-          <p>Hubungi email saya dibawah ini.</p> 
-          <p>Terima Kasih!</p>
-        </div>
-        <div class="mt-53 px-1">
-          <div class="row"> 
-            <div class="col-sm-2">
-              <div class="pb-1">Email:</div>
-            </div>
-            <div class="col-sm-10">
-              <div class="pb-1 fw-bolder">jaelani040326@gmail.com</div>
-            </div>
-            <div class="col-sm-2">
-              <div class="pb-1">Alamat:</div>
-            </div>
-            <div class="col-sm-10">
-              <div class="pb-1 fw-bolder">Jln.Cilame Cibaga, Desa Mekarmaju, Kec.Pasirjambu, Kab.Bandung, jawa barat</div>
-            </div> 
-            <div class="col-sm-2">
-              <div class="pb-1">Telepon:</div>
-            </div>
-            <div class="col-sm-10">
-              <div class="pb-1 fw-bolder">+6281-214-577-909</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<footer class="pt-4 pb-4 text-center bg-light">
-  <div class="container">
-    <div class="my-3">
-      <div class="h4">Ahmad Jaelani</div>
-      <p>Web Developer</p>
-      <div class="social-nav">
-        <nav role="navigation">
-          <ul class="nav justify-content-center">
-            <!-- <li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Github"><i class="fab fab-github"></i><span class="menu-title sr-only">Twitter</span></a></li> -->
-            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/sopian.sauri.7568596?mibextid=ZbWKwL" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/p/CpxJOLuPQJn/?utm_source=ig_web_copy_link" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-    <div class="text-small text-secondary">
-      <div class="mb-1">&copy; CopyRight 2023.</div>
-      <div>
-        <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-    </div>
-  </div>
-</footer></div>
     </div>
     <div id="scrolltop"><a class="btn btn-secondary" href="#top"><span class="icon"><i class="fas fa-angle-up fa-x"></i></span></a></div>
     <script src="./scripts/imagesloaded.pkgd.min.js?ver=1.2.0"></script>
